2019-1/221/users/4108/executions/1619_2930.log
== TEST (2019-04-02 08:28:56) 
-- CODE:
T = int(input("Período de oscilação: ")
import.math
l = float(9,81 * (T/2 * pi))
		  
			 
		  
		  
		  

-- ERROR:
File "XXXX", line 2
    import.math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:29:59) 
-- CODE:
T = int(input("Período de oscilação: ")
import.math
l = float(9.81 * (T /2 * pi))
		  
		  
			 
		  
		  
		  

-- ERROR:
File "XXXX", line 2
    import.math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:31:48) 
-- CODE:
T = int(input("Período de oscilação: ")
import.math
l = float(9.81 * (T /2 * pi)**2)
		  
		  
			 
		  
		  
		  

-- ERROR:
File "XXXX", line 2
    import.math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:32:31) 
-- CODE:
T = int(input("Período de oscilação: ")
import.math
l = float(9.81 * (T /2 * pi)**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
File "XXXX", line 2
    import.math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:33:14) 
-- CODE:
T = int(input("Período de oscilação: ")
import.math
l = float(9.81 * (T /(2 * pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
File "XXXX", line 2
    import.math
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:33:51) 
-- CODE:
T = int(input("Período de oscilação: "))
import math
l = float(9.81 * (T /(2 * pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:36:18) 
-- CODE:
T = int(input("Período de oscilação: "))
import math
l = float(9.81 * (T /(2 * pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:36:31) 
-- CODE:
T = int(input("Periodo de oscilação: "))
import math
l = float(9.81 * (T /(2 * pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:36:40) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81 * (T /(2 * pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:37:51) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81 * (T /(2 * math.pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:38:07) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81 * (T /(2 * math.pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:41:08) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81 * (T /(2 * math.pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:44:09) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print =(l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:45:27) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:46:01) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- EXECUTION TIME:
0.141826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1619/2930/main.py", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:46:10) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:46:29) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- EXECUTION TIME:
0.128216
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1619/2930/main.py", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:46:45) 
-- CODE:
T = int(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    T = int(input())
ValueError: invalid literal for int() with base 10: '20.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:47:23) 
-- CODE:
T = float(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:47:28) 
-- CODE:
T = float(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- OUTPUT:
99.39608115313338
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:47:34) 
-- CODE:
T = float(input("Periodo de oscilacao: "))
import math
l = float(9.81*(T/(2*math.pi))**2)
print (l)
		  
		  
		  
			 
		  
		  
		  

-- EXECUTION TIME:
0.21279
-- TEST CASE 1:
---- input:
20.0
---- correct output:
99.39608115313338
---- user output:
99.39608115313338
-- TEST CASE 2:
---- input:
168.5
---- correct output:
7055.195962800127
---- user output:
7055.195962800127
-- TEST CASE 3:
---- input:
324.2
---- correct output:
26117.72180773005
---- user output:
26117.72180773005
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
